--- a/CSS/styleCapa.css
+++ b/CSS/styleCapa.css
@@ -5,8 +5,9 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column; /* organiza verticalmente */
-    background-color: #fefefe;
+    background: linear-gradient(135deg, #f8cdda, #1d2b64);
 }
+
 
 .container {
     position: relative;
